# nlp-knock-100

./: README.md  pyproject.toml
data/chapter2/: popular-names-aa  popular-names-ab  popular-names-ac  popular-names-ad  popular-names-ae  popular-names-af  popular-names-ag  popular-names-ah  popular-names-ai  popular-names-aj  popular-names-ak  popular-names-al  popular-names-am  popular-names-an  popular-names-ao  popular-names-ap  popular-names-aq  popular-names-ar  popular-names-as  popular-names-at  popular-names-au  popular-names-av  popular-names-aw  popular-names-ax  popular-names-ay  popular-names-az  popular-names-ba  popular-names-bb
data/chapter3/: .gitignore
data/chapter6/: 50.csv  test.csv  test.feature.txt  train.csv  train.feature.txt  valid.csv  valid.feature.txt
data/chapter7/: countries.csv
src/nlp_knock_100/: __init__.py  chapter1.py  chapter2.py  chapter3.py  chapter4.py  chapter6.py  chapter7.py  chapter8.py  chapter9.py  util.py
