[project]
name = "nlp-knock-100"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sor4chi", email = "80559385+sor4chi@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
start = "nlp_knock_100:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_knock_100"]
