[project]
name = "nlp-knock-100"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sor4chi", email = "80559385+sor4chi@users.noreply.github.com" },
]
dependencies = [
    "requests>=2.31.0",
    "matplotlib>=3.8.3",
    "japanize-matplotlib>=1.1.3",
    "setuptools>=69.1.1",
    "scikit-learn>=1.4.1.post1",
    "pandas>=2.2.1",
    "gensim>=4.3.2",
    "nltk>=3.8.1",
    "seaborn>=0.13.2",
    "optuna>=3.5.0",
    "scipy>=1.12.0",
    "torch>=2.2.1",
    "transformers>=4.38.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
start = "nlp_knock_100:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_knock_100"]
